try to link gulp

--- a/angulartodo/index.html
+++ b/angulartodo/index.html
@@ -80,9 +80,13 @@
 </div>
 </div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.js">	 </script>
+<table-dir todos="todos"></table-dir>
 
-<script type="text/javascript" src="controller.js"></script>
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.js"></script>-->
+
+<script type="text/javascript" src="bundle.js"></script>
+
+<!--<script type="text/javascript" src="controller.js"></script>-->
 
 </body>
 </html>
