--- a/angulartodo/templatetable.html
+++ b/angulartodo/templatetable.html
@@ -1,3 +1,5 @@
+
+
 <table class="table table-stripped">
 		<tr>
 			<th>
@@ -7,19 +9,17 @@
 					<i ng-show="sortType == 'name' && sortReverse" class="glyphicon glyphicon-arrow-down"></i>
 				</a>
 			</th>
-			<th>
-				<a href="#" ng-click="sortType = 'date'; sortReverse = !sortReverse">
-					Date
-					<i ng-show="sortType == 'date' && !sortReverse" class="glyphicon glyphicon-arrow-up"></i>
-					<i ng-show="sortType == 'date' && sortReverse" class="glyphicon glyphicon-arrow-down"></i>
-				</a>
-			</th>
+			<th>Deadline Date</th>
 			<th></th>
 		</tr>
-		<tr ng-repeat="todo in model.todos|filter:searchText| orderBy:sortType:!sortReverse" ng-class= "(todo.foolday=='true') ? 'fulltime' : ''"  track by $index">
+		<tr ng-repeat="todo in model.todos|filter:searchText| filter: model.todos.foolday |orderBy:sortType:!sortReverse" ng-class= "todo.foolday"  track by $index">
 
-			<td>{{todo.name}}</td>
-			<td>{{todo.date }}</td>
+
+
+			<td>{{todo.name}}
+			<p class="comment" ng-show="todo.foolday==='partdone'">  {{todo.comment}}</p>
+			</td>
+			<td>{{todo.date }}</td>			
 			<td>
 				<button class="btn btn-primary" ng-click="edit(todo)"  >Edit</button> 
 				<button class="btn btn-error" ng-click="remove(todo)">Delete</button>
@@ -27,3 +27,7 @@
 			</td>
 		</tr>
 	</table>
+
+<button class="btn btn-warn" ng-click="showMore()" ng-disabled="end">Show More</button>
+
+
