--- a/angulartodo/index.html
+++ b/angulartodo/index.html
@@ -16,77 +16,53 @@
 <body ng-controller="toDoCtrl">
 
 	<input type="text" class="form-control" ng-model="searchText.name"  placeholder="search name">
+
+	
+	<label>
+    <input type="radio" ng-model="model.todos.foolday" value="todoCl">
+    todo
+  </label><br/>
+  <label>
+    <input type="radio" ng-model="model.todos.foolday" value="inprogress">
+    in progress
+  </label><br/>
+  <label>
+    <input type="radio" ng-model="model.todos.foolday" value="partdone">   
+    part done
+  </label>
+  <br/>
+    <label>
+    <input type="radio" ng-model="model.todos.foolday" >   
+    No filter
+  </label>
 	<div class="row">
 	<div class="col-sm-6">
-	<table class="table table-stripped">
-		<tr>
-			<th>
-				<a href="#" ng-click="sortType = 'name'; sortReverse = !sortReverse">
-					Name
-					<i ng-show="sortType == 'name' && !sortReverse" class="glyphicon glyphicon-arrow-up"></i>
-					<i ng-show="sortType == 'name' && sortReverse" class="glyphicon glyphicon-arrow-down"></i>
-				</a>
-			</th>
-			<th>
-				<a href="#" ng-click="sortType = 'date'; sortReverse = !sortReverse">
-					Date
-					<i ng-show="sortType == 'date' && !sortReverse" class="glyphicon glyphicon-arrow-up"></i>
-					<i ng-show="sortType == 'date' && sortReverse" class="glyphicon glyphicon-arrow-down"></i>
-				</a>
-			</th>
-			<th></th>
-		</tr>
-		<tr ng-repeat="todo in model.todos|filter:searchText| orderBy:sortType:!sortReverse" ng-class= "(todo.foolday=='true') ? 'fulltime' : ''"  track by $index">
 
-			<td>{{todo.name}}</td>
-			<td>{{todo.date }}</td>
-			<td>
-				<button class="btn btn-primary" ng-click="edit(todo)"  >Edit</button> 
-				<button class="btn btn-error" ng-click="remove(todo)">Delete</button>
 
-			</td>
-		</tr>
-	</table>
+	<table-dir todos="model.todos"></table-dir>
+
+
 	<button class="btn btn-warning" ng-click="showme=true" ng-click="reset()">Add new</button>
 </br>
 </div>
 
 <div class="col-sm-6">
-<form ng-show="showme"  name="form" >
 
-	<div class="form-group" ng-class="{ 'has-error' : form.name.$invalid && !form.name.$pristine }">
-		<input type="text" name="name" class="form-control" placeholder="type name" ng-model="model.selected.name" ng-minlength="3" ng-maxlength="15" required ">
-		<p ng-show="form.name.$error.minlength" class="help-block">name is too short.</p>
-		<p ng-show="form.name.$error.maxlength" class="help-block">name is too long.</p>
-	</div >
+<form-dir todos="model.todos"></form-dir>
 
-	<div class="form-group" ng-class="{ 'has-error' : form.date.$invalid && !form.date.$pristine }">
-		<input name="date"  class="form-control" placeholder="type date" ng-model="model.selected.date" ng-pattern="/(0[1-9]|[12][0-9]|3[01])[- /.](0[1-9]|1[012])[- /.](19|20)\d\d/" required ">
-		<p ng-show="form.date.$error.pattern" class="help-block">Date should loke like dd.mm.yyyy</p>
-	</div>
-
-
-	<div class="form-group">
-		<input type="checkbox" ng-model="model.selected.foolday"
-           ng-true-value="'true'" ng-false-value="'false'">
-           <p>foolday {{model.selected.foolday}}</p>
-	</div>
-
-
-	<button class="btn btn-primary" ng-click="save(model.name)" ng-disabled="form.$invalid">Save</button> 
-	<button class="btn btn-error" ng-click="showme=false" ng-click="reset()">NOOOOO</button>
-
-</form>
-</div>
 </div>
 
-<table-dir todos="todos"></table-dir>
 
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.js"></script>-->
 
-<script type="text/javascript" src="bundle.js"></script>
+</div>
 
-<!--<script type="text/javascript" src="controller.js"></script>-->
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.js"></script>
+
+<!--<script type="text/javascript" src="bundle.js"></script>-->
+
+<script type="text/javascript" src="controller.js"></script>
 
 </body>
 </html>
