--- a/angulartodo/templateform.html
+++ b/angulartodo/templateform.html
@@ -6,6 +6,14 @@
 		<p ng-show="form.name.$error.maxlength" class="help-block">name is too long.</p>
 	</div >
 
+<div class="form-group" ng-class="{ 'has-error' : form.user.$invalid && !form.user.$pristine }" >
+		<select name="user" class="form-control" ng-model="model.selected.nameUser" ng-minlength="2" required>
+			<option ng-repeat="user in model.users" value={{user.nameUser}}>{{user.nameUser}}</option>
+		</select>
+		<p ng-show="form.user.$error.minlength" class="help-block">You didn't choose anything</p>		
+	</div>
+
+
 	<div class="form-group" ng-class="{ 'has-error' : form.date.$invalid && !form.date.$pristine }">
 		<input name="date"  class="form-control" placeholder="type date" ng-model="model.selected.date" ng-pattern="/(0[1-9]|[12][0-9]|3[01])[- /.](0[1-9]|1[012])[- /.](19|20)\d\d/" required ">
 		<p ng-show="form.date.$error.pattern" class="help-block">Date should look like dd.mm.yyyy</p>
@@ -16,19 +24,23 @@
 
 <div class="form-group">
 <label>
-    <input type="radio" ng-model="model.selected.foolday" value="todoCl" required>
+    <input type="radio" ng-model="model.selected.foolday" value="todoCl" ng-click="requiredCom=false" required>
     todo
   </label><br/>
   <label>
-    <input type="radio" ng-model="model.selected.foolday" value="inprogress" required>
+    <input type="radio" ng-model="model.selected.foolday" value="inprogress"  ng-click="requiredCom=false" required>
     in progress
   </label><br/>
   <label>
-    <input type="radio" ng-model="model.selected.foolday" value="partdone" required ng-click="requiredCom=true">   
+    <input type="radio" ng-model="model.selected.foolday" value="partdone"  ng-click="requiredCom=true" required >   
     part done
   </label>
   <br/>
-   <input type="text" ng-model="model.selected.comment" placeholder="why part done?!" ng-show="model.selected.foolday==='partdone'" ng-required="requiredCom">
+
+<div class="form-group" ng-class="{ 'has-error' : form.comment.$invalid && !form.comment.$pristine }">
+		<input type="text" class="form-control" name="comment" ng-model="model.selected.comment" placeholder="why part done?!" ng-minlength="5" ng-show="model.selected.foolday==='partdone'" ng-required="requiredCom"  >
+		<p ng-show="form.comment.$error.minlength" class="help-block">Comment should be longer 5 Char</p>
+	</div>	
 </div>
 
 	
