a bit of new view and code style

--- a/angulartodo/index.html
+++ b/angulartodo/index.html
@@ -8,7 +8,7 @@
 
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 	<!-- Latest compiled and minified JavaScript -->
 
@@ -70,7 +70,11 @@
 
 <!--<script type="text/javascript" src="bundle.js"></script>-->
 
-<script type="text/javascript" src="controller.js"></script>
+<script type="text/javascript" src="/js/module/module.js"></script>
+<script type="text/javascript" src="/js/controller/controller.js"></script>
+<script type="text/javascript" src="/js/directive/table-dir.js"></script>
+<script type="text/javascript" src="/js/directive/form-dir.js"></script>
+
 
 </body>
 </html>
