--- a/angulartodo/index.html
+++ b/angulartodo/index.html
@@ -2,7 +2,8 @@
 <html lang="en" ng-app="app" data-framework="firebase">
 <head>
 	<meta charset="UTF-8">
-	<title>angular doc</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Angular ToDo</title>
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -13,7 +14,7 @@
 	<!-- Latest compiled and minified JavaScript -->
 
 </head>
-<body ng-controller="toDoCtrl">
+<body ng-controller="toDoCtrl as todoc">
 <div class="container">
 <nav class="navbar navbar-inverse">
 
@@ -48,7 +49,7 @@
 
 	<table-dir todos="model.todos"></table-dir>
 
-<button class="btn btn-warn" ng-click="showMore()" ng-disabled="end"> Show <i class="glyphicon glyphicon-chevron-down"></i> More</button>
+<button class="btn btn-primary" ng-click="showMore()" ng-disabled="end"> Show <i class="glyphicon glyphicon-chevron-down"></i> More</button>
 	<button class="btn btn-warning" ng-click="showme=true" ng-click="reset()"> <i class="glyphicon glyphicon-plus "></i> Add new</button>
 </br>
 </div>
@@ -71,9 +72,13 @@
 <!--<script type="text/javascript" src="bundle.js"></script>-->
 
 <script type="text/javascript" src="/js/module/module.js"></script>
+<script type="text/javascript" src="/js/service/service.js"></script>
+<script type="text/javascript" src="/js/factory/factory.js"></script>
 <script type="text/javascript" src="/js/controller/controller.js"></script>
 <script type="text/javascript" src="/js/directive/table-dir.js"></script>
 <script type="text/javascript" src="/js/directive/form-dir.js"></script>
+<script type="text/javascript" src="/js/constants/constants.js"></script>
+
 
 
 </body>
